# Konzolvilag_MNYT

./: CMakeLists.txt  main.cpp
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
Classes/: Contractor.cpp  Executive.cpp  Menu.cpp
Headers/: CompanyIncome.hpp  Contractor.hpp  Employee.hpp  Executive.hpp  Menu.hpp  StaffMember.hpp
